kubernetes/nodebb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose-vimagick.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: nodebb
  name: nodebb
spec:
  ports:
    - name: "4567"
      port: 4567
      targetPort: 4567
  selector:
    io.kompose.service: nodebb
status:
  loadBalancer: {}
