kubernetes/nodebb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodebb-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: nodebb.evasquezapplaudo.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodebb
            port:
              number: 4567
  tls:
  - hosts:
    - nodebb.evasquezapplaudo.tk
    secretName: nodebb-cert-tls
